services/downloads-standard/sonarr-anime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime
  namespace: downloads-standard
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr-anime.labmatt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-anime
            port:
              number: 8989
